--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'cn.carbs.android:ExpandableTextView:1.0.3'
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
 }
